[Chore]: update 메소드에 isFound 요청 추가